news z-index fixed

--- a/css/main.css
+++ b/css/main.css
@@ -5480,7 +5480,7 @@ header {
 .reviews_container .item .item_inner.active {
     border: 1px solid #C5C5C5;
     position: absolute;
-    z-index: 9999
+    z-index: 900
 }
 .news_container .item .item_news.active {
 	position: relative;
